--- a/src/App.css
+++ b/src/App.css
@@ -19,5 +19,5 @@
     bottom: 0;
 }
 .bg-image {
-    background-image: url('./assets/img/carousel-1.jpg');
+    background-image: url('/assets/img/carousel-1.jpg');
 }
