--- a/src/css/style.css
+++ b/src/css/style.css
@@ -225,7 +225,7 @@
 	height: 100%;
 	min-height: 500px;
 	background: linear-gradient(rgba(15, 23, 43, 0.1), rgba(15, 23, 43, 0.1)),
-		url(../../public/assets/img/video.jpg);
+		url(/assets/img/video.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -340,7 +340,7 @@
 /*** Testimonial ***/
 .testimonial {
 	background: linear-gradient(rgba(15, 23, 43, 0.7), rgba(15, 23, 43, 0.7)),
-		url(../../public/assets/img/carousel-2.jpg);
+		url(/src/assets/img/carousel-2.jpg);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
