--- a/src/css/style.css
+++ b/src/css/style.css
@@ -219,123 +219,6 @@
 	color: #ffffff !important;
 }
 
-/*** Youtube Video ***/
-.video {
-	position: relative;
-	height: 100%;
-	min-height: 500px;
-	background: linear-gradient(rgba(15, 23, 43, 0.1), rgba(15, 23, 43, 0.1)),
-		url(/assets/img/video.jpg);
-	background-position: center center;
-	background-repeat: no-repeat;
-	background-size: cover;
-}
-
-.video .btn-play {
-	position: absolute;
-	z-index: 3;
-	top: 50%;
-	left: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	box-sizing: content-box;
-	display: block;
-	width: 32px;
-	height: 44px;
-	border-radius: 50%;
-	border: none;
-	outline: none;
-	padding: 18px 20px 18px 28px;
-}
-
-.video .btn-play:before {
-	content: "";
-	position: absolute;
-	z-index: 0;
-	left: 50%;
-	top: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	display: block;
-	width: 100px;
-	height: 100px;
-	background: var(--primary);
-	border-radius: 50%;
-	animation: pulse-border 1500ms ease-out infinite;
-}
-
-.video .btn-play:after {
-	content: "";
-	position: absolute;
-	z-index: 1;
-	left: 50%;
-	top: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	display: block;
-	width: 100px;
-	height: 100px;
-	background: var(--primary);
-	border-radius: 50%;
-	transition: all 200ms;
-}
-
-.video .btn-play img {
-	position: relative;
-	z-index: 3;
-	max-width: 100%;
-	width: auto;
-	height: auto;
-}
-
-.video .btn-play span {
-	display: block;
-	position: relative;
-	z-index: 3;
-	width: 0;
-	height: 0;
-	border-left: 32px solid var(--dark);
-	border-top: 22px solid transparent;
-	border-bottom: 22px solid transparent;
-}
-
-@keyframes pulse-border {
-	0% {
-		transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1);
-		opacity: 1;
-	}
-
-	100% {
-		transform: translateX(-50%) translateY(-50%) translateZ(0) scale(1.5);
-		opacity: 0;
-	}
-}
-
-#videoModal {
-	z-index: 99999;
-}
-
-#videoModal .modal-dialog {
-	position: relative;
-	max-width: 800px;
-	margin: 60px auto 0 auto;
-}
-
-#videoModal .modal-body {
-	position: relative;
-	padding: 0px;
-}
-
-#videoModal .close {
-	position: absolute;
-	width: 30px;
-	height: 30px;
-	right: 0px;
-	top: -30px;
-	z-index: 999;
-	font-size: 30px;
-	font-weight: normal;
-	color: #ffffff;
-	background: #000000;
-	opacity: 1;
-}
 
 /*** Testimonial ***/
 .testimonial {
@@ -480,4 +363,70 @@
 	margin-right: 0;
 	padding-right: 0;
 	border-right: none;
+}
+
+/* ==== Slider media queries */
+@media (max-width: 800px) {
+	.sliders{
+		flex-wrap: wrap;		
+		padding: 0.1rem;
+		
+	}
+
+	.sliders img{
+		width: 48%;
+		margin-bottom: 25px;
+	}
+}
+
+/* ===== Video player ===== */
+.img-icon{	
+	border-radius: 10px;
+}
+
+.play-icon{
+	width: 60px;
+	position: absolute;
+	top: 50%;
+	left: 40%;
+	transform: translate(-50%, -50%);
+	cursor: pointer;
+}
+
+@media (max-width: 800px){
+	.img-icon{
+		width: 200%;				
+		margin-left: 0.5rem;
+		align-items: center;
+	}
+
+	.play-icon{
+		left: 50%;
+	}
+
+}
+
+/* =======Video ======== */
+.video-player{
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.9);
+	z-index: 100;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.video-player video{
+	width: 90%;
+	max-width: 900px;
+	height: auto;
+	border: 4px solid #fff;
+}
+
+.video-player.hide{
+	display: none;
 }
